fix: fixed logo footer z-index

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -72,12 +72,13 @@ header{
 
 // main
 main{
+  position: relative;
+  z-index: 1;
+  // position
   background-color: #1C1C1C;
   
   color: #fff;
   .container{
-    position: relative;
-    // position
     padding: 4em 0;
     .tag{
       position: absolute;
@@ -159,12 +160,15 @@ main{
 }
 
 main.comics{
+  position: relative;
+  z-index: 1;
   .separator{
     background-color: #0482F9;
     height: 80px;
   }
   .container{
     position: relative;
+    z-index: 1;
     // position
     display: flex;
     justify-content: center;
@@ -234,6 +238,8 @@ main.comics{
 }
 
 main.create{
+  position: relative;
+  z-index: 1;
   .container{
     display: flex;
     justify-content: center;
